[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "cpsat-autotune"
version = "0.6.0"
authors = [
    { name = "Dominik Krupke", email = "krupked@gmail.com" },
]
description = "A tool to automatically tune the hyperparameters of the OR-Tools' CP-SAT solver."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "optuna",
    "numpy",
    "scipy",
    "rich",
    "click",
    "jupyter>=1.1.1",
    "ortools==9.14.6206",
]

[project.scripts]
cpsat-autotune = "cpsat_autotune.cli:cli"
